# WWZD

./: .gitignore  .pre-commit-config.yaml  README  README.md  first_row.json  logging_config.py  main.py  pyproject.toml  read_parquet.py  requirements.txt
DATA/: output_data.parquet  prepare_data.py  save_json_as_parquet.py  transform_images.py
DATA/dim_reduction/: pca_3.parquet  t_sne_3.parquet  truncated_svd_3.parquet
src/: check_data_lib_performance.py  data_loader.py  read_parquet.py
src/data_transformation/: data_loader.py  data_manager.py  data_menager.py  dim_reduction.py
src/visualisation/: example.py  plotly_raport.py
