[project]
name = "WWZD"
version = "0.1.0"
description = "find, process and visualize DATA"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "uv",
    "numpy",
    "torchvision",
    "polars",
    "pandas",
    "scikit-learn",
    "black",
    "ruff",
    "pre-commit>=4.0.1",
    "holoviews>=1.20.0",
    "panel>=1.5.5",
    "plotly>=5.24.1",
]

[tool.uv]
managed = true
package = true
